# QEMU-Web-Control

./: .env.example  .gitignore  README.RU.md  README.md  composer.json  docker-compose.websockify-debug.yml  docker-compose.yml  docker-compose.yml.backup  install.sh  package-lock.json  package.json  qemu-autostart.service  restart.sh  run_unit_test.sh  start.sh  stop.sh  uninstall.sh
app/Console/Commands/: AutostartVirtualMachines.php  ProcessBootMediaDeletions.php  RenewLetsEncryptCommand.php  VmSyncStatusCommand.php
app/Http/Controllers/: ActivityLogController.php  BootMediaController.php  CertificateController.php  DashboardController.php  GroupController.php  HelpController.php  LanguageController.php  UserController.php  VirtualMachineController.php
app/Http/Middleware/: SetLocaleMiddleware.php
app/Models/: ActivityLog.php  Group.php  InfoLog.php  Role.php  Setting.php  User.php  UserVmPermissions.php  VirtualMachine.php  VirtualMachineDisk.php
app/Policies/: VirtualMachinePolicy.php
app/Providers/: AuthServiceProvider.php
app/Services/: BootMediaServiceClient.php  QemuControlServiceClient.php  QemuService.php  RoleService.php  SslService.php  VncTokenService.php
bootstrap/: app.php
config/: app.php  database.php  qemu.php
database/migrations/: 2025_01_01_000001_create_roles_table.php  2025_01_01_000002_create_virtual_machines_table.php  2025_01_01_000003_create_activity_logs_table.php  2025_01_01_000004_add_autostart_to_virtual_machines.php  2026_02_06_000005_add_architecture_to_virtual_machines.php  2026_02_06_000006_create_virtual_machine_disks_table.php  2026_02_06_000007_create_settings_table.php  2026_02_06_000008_add_server_id_to_activity_logs.php  2026_02_06_000009_add_vm_id_to_virtual_machines.php  2026_02_14_000010_add_virtual_machine_data_constraints.php  2026_02_14_000011_create_info_logs_table.php  2026_02_14_000012_add_operation_type_to_info_logs.php  2026_02_14_000012_add_use_audio_to_virtual_machines.php  2026_02_15_000001_create_user_vm_permissions_table.php  2026_02_15_000004_add_shared_with_all_to_virtual_machines.php  2026_02_15_000005_create_vm_user_shares_table.php  2026_02_15_000006_create_vm_group_shares_table.php  2026_02_16_000001_add_others_vm_permissions.php  2026_02_16_000002_drop_can_restart_vm.php  2026_03_09_000001_add_enable_kvm_to_virtual_machines.php  2026_03_12_000001_add_bridge_name_to_virtual_machines.php  2026_03_13_000001_drop_bridge_name_from_virtual_machines.php  2026_03_16_000001_add_network_interface_to_virtual_machines.php
database/seeders/: DatabaseSeeder.php  SettingsSeeder.php
docker/: docker-compose.host-network.yml  docker-compose.riscv.yml
docker/nginx/: Dockerfile
docker/nginx/conf.d/: default.conf  default.conf.bridge  default.host-network.conf
docker/php/: Dockerfile  Dockerfile.riscv-simple  local.ini
docker/websockify/: Dockerfile
docs/EN/: APACHE.EN.md  AUTHORS.EN.md  AUTOSTART.EN.md  BOOT-MEDIA.EN.md  CHANGELOG.EN.md  COMMANDS.EN.md  DATABASE-TROUBLESHOOTING.EN.md  HOST-NETWORK-MODE.EN.md  INSTALL-EXAMPLE.EN.md  INSTALL.EN.md  PORT-CONFLICT-HANDLING.EN.md  RISCV-QUICKSTART.EN.md  RISCV.EN.md  TROUBLESHOOTING.EN.md
docs/RU/: APACHE.RU.md  AUTHORS.RU.md  AUTOSTART.RU.md  BOOT-MEDIA.RU.md  CHANGELOG.RU.md  COMMANDS.RU.md  DATABASE-TROUBLESHOOTING.RU.md  HOST-NETWORK-MODE.RU.md  INSTALL-EXAMPLE.RU.md  INSTALL.RU.md  PORT-CONFLICT-HANDLING.RU.md  RISCV-QUICKSTART.RU.md  RISCV.RU.md  TROUBLESHOOTING.RU.md
lang/en/: pagination.php  ui.php
lang/ru/: pagination.php  ui.php
resources/css/: app.css
resources/views/: dashboard.blade.php  welcome.blade.php
resources/views/activity-logs/: index.blade.php
resources/views/auth/: login.blade.php
resources/views/boot-media/: index.blade.php
resources/views/certificates/: index.blade.php
resources/views/errors/: 403.blade.php
resources/views/groups/: create.blade.php  edit.blade.php  index.blade.php
resources/views/help/: doc.blade.php  index.blade.php
resources/views/layouts/: app.blade.php  guest.blade.php
resources/views/users/: create.blade.php  edit.blade.php  index.blade.php
resources/views/vms/: console.blade.php  create.blade.php  edit.blade.php  index.blade.php
routes/: console.php  web.php
scripts/: autostart-service.sh  diagnose-mariadb.sh  diagnose.sh  fix-apache-nginx-conflict.sh  fix-boot-media-docker.sh  fix-database-riscv.sh  fix-db-connection.sh  fix-nodejs-riscv.sh  fix-port-conflict.sh  fix-qemu-bridge.sh  full-diagnostic.sh  get_file_sha256.sh  install-boot-images-service.sh  install-control-service.sh  process-boot-media-deletions.sh  quick-fix-riscv.sh  renew-letsencrypt-deploy-hook.sh  safe-rm.sh  setup-database.sh  setup_bridge.sh  setup_bridge_main_nic.sh  show_logs.sh  switch-network-mode.sh  sys-info-to-file.sh  test-db-connection.sh
scripts/js/: postcss.config.js  tailwind.config.js  vite.config.js
services/QemuBootImagesControlService/: .gitignore  CMakeLists.txt  QemuBootImagesControlService.service
services/QemuBootImagesControlService/proto/: qemu_boot_images.proto
services/QemuBootImagesControlService/src/: config.cpp  config.h  http_server.cpp  http_server.h  iso_service_impl.cpp  iso_service_impl.h  logger.cpp  logger.h  main.cpp  move_operation.cpp  move_operation.h  rate_limiter.cpp  rate_limiter.h
services/QemuBootImagesControlService/tests/: test_config.cpp  test_iso_service.cpp  test_move_operation.cpp  test_rate_limiter.cpp
services/QemuControlService/: CMakeLists.txt  QemuControlService.service
services/QemuControlService/proto/: qemu_control.proto
services/QemuControlService/src/: config.cpp  config.h  http_server.cpp  http_server.h  logger.cpp  logger.h  main.cpp  qemu_service_impl.cpp  qemu_service_impl.h  vnc_proxy.cpp  vnc_proxy.h
services/QemuControlService/tests/: config_test.cpp  http_api_test.cpp
tests/: CreatesApplication.php
tests/Feature/: BootMediaControllerTest.php  GroupControllerTest.php  UserControllerVmPermissionsTest.php  VirtualMachineControllerTest.php
tests/Unit/Models/: VirtualMachineVisibleForTest.php
(+5 files in other folders)
